[package]
name = "bdf"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
axum-extra = {  version = "0.9", features = ["typed-header"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
once_cell = { version = "1.19", features = [] }
chrono = "0.4"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }